// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnorderedList renders StyledUl with given display prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    class="emotion-0"
    display="inline-block"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders default StyledUl 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

<ul
    class="emotion-0"
  >
    first nodesecond nodethird node
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders different types of children 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

.emotion-19 {
  display: inline-block;
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-19 {
    transition-property: color,fill;
    transition-duration: 200ms,200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-19 {
    transition-property: color,fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1),cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-19 svg {
  fill: #3358CC;
}

.emotion-19:hover:not(:disabled) {
  color: #254CAC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-19:hover:not(:disabled) svg {
  fill: #254CAC;
}

.emotion-19:active:not(:disabled) {
  color: #14328D;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-19:active:not(:disabled) svg {
  fill: #14328D;
}

.emotion-19:visited:not(:disabled) {
  color: #6454E3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-19:visited:not(:disabled) svg {
  fill: #6454E3;
}

.emotion-19:visited:hover:not(:disabled) {
  color: #6454E3;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-19:visited:hover:not(:disabled) svg {
  fill: #6454E3;
}

.emotion-19:focus-visible:not(:disabled) {
  outline-color: #3768FB;
  outline-style: solid;
  outline-width: 2px;
  outline-offset: 2px;
}

@media not all and (min-resolution: 0.001dpcm) {
  @supports (-webkit-appearance: none) and (stroke-color: transparent) {
    .emotion-19:focus-visible:not(:disabled) {
      outline-style: auto;
    }
  }
}

.emotion-20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-21 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

.emotion-22 {
  margin: 0;
  display: inline-block;
  display: block;
}

.emotion-24 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-24 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-24 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-24.emotion-24 {
  width: 16px;
  height: 16px;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          String node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          100
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          <a
            class="emotion-19"
            href="http://localhost:6006"
          >
            <span
              class="emotion-20"
            >
              <span
                class="emotion-21"
              >
                <span
                  class="emotion-22"
                >
                  Link component
                </span>
              </span>
              <span
                class="emotion-21"
              >
                <svg
                  class="emotion-24 emotion-5"
                  fill="currentColor"
                  focusable="false"
                  role="img"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title>
                    External link
                  </title>
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                  />
                </svg>
              </span>
            </span>
          </a>
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with additional HTML attributes 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #2E2E2E;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #2E2E2E;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #2E2E2E;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #2E2E2E;
  fill: #2E2E2E;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #2E2E2E;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #2E2E2E;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    id="unordered-list-id"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          ListItem
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with custom list item marker with different size 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 16px;
  height: 16px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with defaults 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with logical props 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
  margin-inline: 48px;
  margin-block: 32px;
  padding-inline: 8px;
  padding-block: 16px;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with marker at the end when list takes more than one line 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: end;
  -ms-flex-item-align: end;
  align-self: end;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with marker at the start when list takes more than one line 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  color: #3B3B3B;
  fill: #3B3B3B;
  vertical-align: unset;
  display: inline-block;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-4.emotion-4 {
  width: 8px;
  height: 8px;
  color: #3B3B3B;
  fill: #3B3B3B;
}

@media screen and (prefers-reduced-motion: no-preference) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 200ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

@media screen and (prefers-reduced-motion: reduce) {
  .emotion-4.emotion-4 {
    transition-property: fill;
    transition-duration: 0ms;
    transition-timing-function: cubic-bezier(0, 0, .5, 1);
  }
}

.emotion-6 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-6 svg {
  fill: #3B3B3B;
}

.emotion-6::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-6::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        >
          <svg
            aria-hidden="true"
            class="emotion-4 emotion-5"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm3.5-9c.83 0 1.5-.67 1.5-1.5S16.33 8 15.5 8 14 8.67 14 9.5s.67 1.5 1.5 1.5zm-7 0c.83 0 1.5-.67 1.5-1.5S9.33 8 8.5 8 7 8.67 7 9.5 7.67 11 8.5 11zm3.5 6.5c2.33 0 4.31-1.46 5.11-3.5H6.89c.8 2.04 2.78 3.5 5.11 3.5z"
            />
          </svg>
        </div>
        <p
          class="emotion-6"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`UnorderedList renders with no list item marker 1`] = `
<DocumentFragment>
  .emotion-0 {
  margin: 0;
  padding: 0;
  list-style: none;
}

.emotion-1:last-child+div {
  margin: 0;
}

.emotion-2 {
  margin-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  margin-right: 8px;
  color: #3B3B3B;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.emotion-3 svg {
  fill: #3B3B3B;
}

.emotion-3 svg,
.emotion-3 img {
  display: block;
}

.emotion-4 {
  margin: 0;
  color: #3B3B3B;
  font-family: "DM Sans",sans-serif;
  font-size: 14px;
  line-height: 21px;
  font-weight: 400;
  letter-spacing: 0;
  padding: 0.5px 0px;
}

.emotion-4 svg {
  fill: #3B3B3B;
}

.emotion-4::before {
  content: '';
  margin-bottom: -0.391em;
  display: block;
}

.emotion-4::after {
  content: '';
  margin-top: -0.409em;
  display: block;
}

<ul
    class="emotion-0"
    role="list"
  >
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        />
        <p
          class="emotion-4"
        >
          Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        />
        <p
          class="emotion-4"
        >
          second node
        </p>
      </div>
    </li>
    <li
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          aria-hidden="true"
          class="emotion-3"
        />
        <p
          class="emotion-4"
        >
          third node
        </p>
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
